@@ -9,6 +9,7 @@ S3method(effect, mer)
 S3method(effect, merMod)
 S3method(effect, lme)
 S3method(effect, polr)
+S3method(effect, poLCA)
 S3method(Effect, lm)
 S3method(Effect, mer)
 S3method(Effect, merMod)
@@ -16,6 +17,7 @@ S3method(Effect, lme)
 S3method(Effect, gls)
 S3method(Effect, multinom)
 S3method(Effect, polr)
+S3method(Effect, poLCA)
 S3method(print, eff)
 S3method(print, efflist)
 S3method(print, summary.eff)
@@ -37,5 +39,6 @@ S3method(allEffects, gls)
 S3method(allEffects, mer)
 S3method(allEffects, merMod)
 S3method(allEffects, lme)
+S3method(allEffects, poLCA)
 S3method(vcov, eff)
 S3method(`[`, efflist)
